kubernetes/namespaces/monitoring/alerts/alertmanager/sd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-sd
  namespace: monitoring
spec:
  selector:
    app: alertmanager
  clusterIP: None
  ports:
  - port: 9093
    targetPort: 9093
    name: am
  - port: 9094
    targetPort: 9094
    name: am-peering
