kubernetes/namespaces/monitoring/alerts/alertmanager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: monitoring
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9093"
spec:
  selector:
    app: alertmanager
  ports:
  - port: 9093
    targetPort: 9093
